--- a/Lab_2/Lab_2_part_2.ipynb
+++ b/Lab_2/Lab_2_part_2.ipynb
@@ -1,17 +1,392 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "600da46a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a7c9aa30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# harmonic_gui.py\n",
+    "import sys\n",
+    "import numpy as np\n",
+    "from scipy import signal\n",
+    "from PyQt5 import QtWidgets, QtCore\n",
+    "from PyQt5.QtCore import Qt\n",
+    "from matplotlib.backends.backend_qt5agg import FigureCanvasQTAgg as FigureCanvas\n",
+    "from matplotlib.figure import Figure\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cb45417a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---------- Default / initial parameters ----------\n",
+    "DEFAULTS = {\n",
+    "    \"amplitude\": 1.0,\n",
+    "    \"frequency\": 5.0,        # Hz\n",
+    "    \"phase\": 0.0,            # radians\n",
+    "    \"noise_mean\": 0.0,\n",
+    "    \"noise_variance\": 0.1,   # variance (σ^2)\n",
+    "    \"duration\": 1.0,         # seconds\n",
+    "    \"fs\": 1000,              # sampling rate (Hz)\n",
+    "    \"filter_type\": \"lowpass\",\n",
+    "    \"filter_order\": 4,\n",
+    "    \"filter_cutoff1\": 10.0,  # Hz (for lowpass/highpass – single cutoff; for bandpass use cutoff1 & cutoff2)\n",
+    "    \"filter_cutoff2\": 50.0,\n",
+    "    \"show_noise\": True,\n",
+    "    \"show_filtered\": True\n",
+    "}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "603ae128",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---------- Utility functions ----------\n",
+    "def harmonic(t, A, freq, phase):\n",
+    "    return A * np.sin(2 * np.pi * freq * t + phase)\n",
+    "\n",
+    "def generate_noise(rng, size, mean, variance):\n",
+    "    sigma = np.sqrt(max(variance, 0.0))\n",
+    "    return rng.normal(loc=mean, scale=sigma, size=size)\n",
+    "\n",
+    "def design_filter(filter_type, order, cutoff1, cutoff2, fs):\n",
+    "    nyq = 0.5 * fs\n",
+    "    if filter_type == \"lowpass\":\n",
+    "        Wn = cutoff1 / nyq\n",
+    "        b, a = signal.butter(order, Wn, btype='low')\n",
+    "    elif filter_type == \"highpass\":\n",
+    "        Wn = cutoff1 / nyq\n",
+    "        b, a = signal.butter(order, Wn, btype='high')\n",
+    "    elif filter_type == \"bandpass\":\n",
+    "        Wn = [min(cutoff1, cutoff2)/nyq, max(cutoff1, cutoff2)/nyq]\n",
+    "        b, a = signal.butter(order, Wn, btype='band')\n",
+    "    else:\n",
+    "        raise ValueError(\"Unknown filter type\")\n",
+    "    return b, a\n",
+    "\n",
+    "def apply_filter(b, a, data):\n",
+    "    # zero-phase filtering\n",
+    "    try:\n",
+    "        return signal.filtfilt(b, a, data)\n",
+    "    except Exception as e:\n",
+    "        # filtfilt can fail for very short signals or unstable filters; fallback to lfilter\n",
+    "        return signal.lfilter(b, a, data)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "93ea32dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---------- Main Qt Application ----------\n",
+    "class HarmonicApp(QtWidgets.QWidget):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.setWindowTitle(\"Harmonic with Noise — Interactive Filter Demo\")\n",
+    "        self.setGeometry(100, 100, 1100, 700)\n",
+    "\n",
+    "        # Time base\n",
+    "        self.fs = DEFAULTS[\"fs\"]\n",
+    "        self.duration = DEFAULTS[\"duration\"]\n",
+    "        self.t = np.linspace(0, self.duration, int(self.fs * self.duration), endpoint=False)\n",
+    "\n",
+    "        # RNG for noise; store noise vector and last noise params\n",
+    "        self.rng = np.random.default_rng()\n",
+    "        self.noise = None\n",
+    "        self.noise_params = {\"mean\": None, \"variance\": None}\n",
+    "\n",
+    "        # Current parameter state\n",
+    "        self.params = DEFAULTS.copy()\n",
+    "\n",
+    "        # UI layout\n",
+    "        main_layout = QtWidgets.QHBoxLayout(self)\n",
+    "\n",
+    "        # Left: plot\n",
+    "        plot_layout = QtWidgets.QVBoxLayout()\n",
+    "        self.fig = Figure(figsize=(6,4))\n",
+    "        self.canvas = FigureCanvas(self.fig)\n",
+    "        plot_layout.addWidget(self.canvas)\n",
+    "        self.ax = self.fig.add_subplot(111)\n",
+    "        self.ax.set_xlabel(\"t (s)\")\n",
+    "        self.ax.set_ylabel(\"y(t)\")\n",
+    "        self.ax.grid(True)\n",
+    "\n",
+    "        main_layout.addLayout(plot_layout, stretch=3)\n",
+    "\n",
+    "        # Right: controls\n",
+    "        controls_layout = QtWidgets.QVBoxLayout()\n",
+    "\n",
+    "        # amplitude\n",
+    "        controls_layout.addWidget(QtWidgets.QLabel(\"<b>Harmonic parameters</b>\"))\n",
+    "        self.amp_spin = self._make_double_spin(\"Amplitude (A)\", DEFAULTS[\"amplitude\"], 0.0, 10.0, 0.1, controls_layout)\n",
+    "        self.freq_spin = self._make_double_spin(\"Frequency (Hz)\", DEFAULTS[\"frequency\"], 0.1, 200.0, 0.1, controls_layout)\n",
+    "        self.phase_spin = self._make_double_spin(\"Phase (rad)\", DEFAULTS[\"phase\"], -2*np.pi, 2*np.pi, 0.1, controls_layout)\n",
+    "\n",
+    "        # noise controls\n",
+    "        controls_layout.addWidget(QtWidgets.QLabel(\"<b>Noise parameters</b>\"))\n",
+    "        self.noise_mean_spin = self._make_double_spin(\"Noise mean\", DEFAULTS[\"noise_mean\"], -5.0, 5.0, 0.01, controls_layout)\n",
+    "        self.noise_var_spin = self._make_double_spin(\"Noise variance (σ²)\", DEFAULTS[\"noise_variance\"], 0.0, 5.0, 0.01, controls_layout)\n",
+    "\n",
+    "        # noise show checkbox\n",
+    "        self.noise_chk = QtWidgets.QCheckBox(\"Show noisy signal\")\n",
+    "        self.noise_chk.setChecked(DEFAULTS[\"show_noise\"])\n",
+    "        controls_layout.addWidget(self.noise_chk)\n",
+    "\n",
+    "        # filter controls\n",
+    "        controls_layout.addSpacing(6)\n",
+    "        controls_layout.addWidget(QtWidgets.QLabel(\"<b>Filter parameters (Butterworth)</b>\"))\n",
+    "        self.filter_type_combo = QtWidgets.QComboBox()\n",
+    "        self.filter_type_combo.addItems([\"lowpass\", \"highpass\", \"bandpass\"])\n",
+    "        self.filter_type_combo.setCurrentText(DEFAULTS[\"filter_type\"])\n",
+    "        controls_layout.addWidget(QtWidgets.QLabel(\"Filter type\"))\n",
+    "        controls_layout.addWidget(self.filter_type_combo)\n",
+    "\n",
+    "        self.filter_order_spin = QtWidgets.QSpinBox()\n",
+    "        self.filter_order_spin.setRange(1, 10)\n",
+    "        self.filter_order_spin.setValue(DEFAULTS[\"filter_order\"])\n",
+    "        controls_layout.addWidget(QtWidgets.QLabel(\"Filter order\"))\n",
+    "        controls_layout.addWidget(self.filter_order_spin)\n",
+    "\n",
+    "        self.cutoff1_spin = self._make_double_spin(\"Cutoff 1 (Hz)\", DEFAULTS[\"filter_cutoff1\"], 0.1, self.fs/2-1, 0.1, controls_layout)\n",
+    "        self.cutoff2_spin = self._make_double_spin(\"Cutoff 2 (Hz) (for bandpass)\", DEFAULTS[\"filter_cutoff2\"], 0.1, self.fs/2-1, 0.1, controls_layout)\n",
+    "\n",
+    "        self.filtered_chk = QtWidgets.QCheckBox(\"Show filtered signal\")\n",
+    "        self.filtered_chk.setChecked(DEFAULTS[\"show_filtered\"])\n",
+    "        controls_layout.addWidget(self.filtered_chk)\n",
+    "\n",
+    "        # Reset button\n",
+    "        self.reset_btn = QtWidgets.QPushButton(\"Reset\")\n",
+    "        controls_layout.addWidget(self.reset_btn)\n",
+    "\n",
+    "        # Spacer\n",
+    "        controls_layout.addStretch()\n",
+    "\n",
+    "        # Instructions\n",
+    "        instr = QtWidgets.QTextEdit()\n",
+    "        instr.setReadOnly(True)\n",
+    "        instr.setFixedHeight(200)\n",
+    "        instr.setHtml(self._instructions_html())\n",
+    "        controls_layout.addWidget(instr)\n",
+    "\n",
+    "        main_layout.addLayout(controls_layout, stretch=2)\n",
+    "\n",
+    "        # Connections\n",
+    "        # Harmonic params -> update but keep noise unless noise params changed\n",
+    "        self.amp_spin.valueChanged.connect(self.on_harmonic_param_changed)\n",
+    "        self.freq_spin.valueChanged.connect(self.on_harmonic_param_changed)\n",
+    "        self.phase_spin.valueChanged.connect(self.on_harmonic_param_changed)\n",
+    "\n",
+    "        # Noise params -> regenerate noise and update\n",
+    "        self.noise_mean_spin.valueChanged.connect(self.on_noise_param_changed)\n",
+    "        self.noise_var_spin.valueChanged.connect(self.on_noise_param_changed)\n",
+    "        self.noise_chk.stateChanged.connect(self.update_plot)\n",
+    "\n",
+    "        # Filter params -> update filtered signal\n",
+    "        self.filter_type_combo.currentTextChanged.connect(self.update_plot)\n",
+    "        self.filter_order_spin.valueChanged.connect(self.update_plot)\n",
+    "        self.cutoff1_spin.valueChanged.connect(self.update_plot)\n",
+    "        self.cutoff2_spin.valueChanged.connect(self.update_plot)\n",
+    "        self.filtered_chk.stateChanged.connect(self.update_plot)\n",
+    "\n",
+    "        # Reset\n",
+    "        self.reset_btn.clicked.connect(self.on_reset)\n",
+    "\n",
+    "        # Initialize noise\n",
+    "        self._ensure_noise_vector()  # uses current noise params\n",
+    "        self.update_plot()\n",
+    "\n",
+    "    def _instructions_html(self):\n",
+    "        return \"\"\"\n",
+    "        <h3>Інструкція</h3>\n",
+    "        <ul>\n",
+    "        <li>Керуйте параметрами гармоніки: Амплітуда, Частота, Фаза — значення відразу застосовуються.</li>\n",
+    "        <li>Змінюйте параметри шуму (середнє/дисперсія). Якщо змінюєте параметри шуму — шум генерується наново.</li>\n",
+    "        <li>Якщо змінити тільки параметри гармоніки (наприклад частоту), то шум залишається тим же, що й раніше.</li>\n",
+    "        <li>Виберіть тип фільтра (lowpass/highpass/bandpass), порядок та частоти зрізу. Фільтр застосовується до поточної зашумленої гармоніки.</li>\n",
+    "        <li>Чекбокси дозволяють вмикати/вимикати відображення зашумленої та відфільтрованої кривих. Кнопка Reset відновлює початкові параметри.</li>\n",
+    "        </ul>\n",
+    "        \"\"\"\n",
+    "\n",
+    "    def _make_double_spin(self, label, default, minimum, maximum, step, layout):\n",
+    "        layout.addWidget(QtWidgets.QLabel(label))\n",
+    "        spin = QtWidgets.QDoubleSpinBox()\n",
+    "        spin.setRange(minimum, maximum)\n",
+    "        spin.setSingleStep(step)\n",
+    "        spin.setDecimals(4 if step<0.01 else 3 if step<0.1 else 2)\n",
+    "        spin.setValue(default)\n",
+    "        layout.addWidget(spin)\n",
+    "        return spin\n",
+    "\n",
+    "    def on_harmonic_param_changed(self, *_):\n",
+    "        # Update stored harmonic params; do not regenerate noise\n",
+    "        self.params[\"amplitude\"] = float(self.amp_spin.value())\n",
+    "        self.params[\"frequency\"] = float(self.freq_spin.value())\n",
+    "        self.params[\"phase\"] = float(self.phase_spin.value())\n",
+    "        # do not touch noise vector\n",
+    "        self.update_plot()\n",
+    "\n",
+    "    def on_noise_param_changed(self, *_):\n",
+    "        # Update noise params and regenerate noise vector\n",
+    "        self.params[\"noise_mean\"] = float(self.noise_mean_spin.value())\n",
+    "        self.params[\"noise_variance\"] = float(self.noise_var_spin.value())\n",
+    "        self._ensure_noise_vector(force=True)\n",
+    "        self.update_plot()\n",
+    "\n",
+    "    def _ensure_noise_vector(self, force=False):\n",
+    "        mean = float(self.noise_mean_spin.value())\n",
+    "        var = float(self.noise_var_spin.value())\n",
+    "        size = self.t.size\n",
+    "        if force or (self.noise is None) or (self.noise_params[\"mean\"] != mean) or (self.noise_params[\"variance\"] != var):\n",
+    "            # regenerate noise\n",
+    "            self.noise = generate_noise(self.rng, size, mean, var)\n",
+    "            self.noise_params[\"mean\"] = mean\n",
+    "            self.noise_params[\"variance\"] = var\n",
+    "\n",
+    "    def compute_signals(self):\n",
+    "        A = float(self.amp_spin.value())\n",
+    "        freq = float(self.freq_spin.value())\n",
+    "        phase = float(self.phase_spin.value())\n",
+    "        clean = harmonic(self.t, A, freq, phase)\n",
+    "\n",
+    "        # ensure noise vector up-to-date w.r.t noise params\n",
+    "        self._ensure_noise_vector(force=False)\n",
+    "        noisy = clean + self.noise\n",
+    "        return clean, noisy\n",
+    "\n",
+    "    def update_plot(self, *_):\n",
+    "        clean, noisy = self.compute_signals()\n",
+    "        self.ax.clear()\n",
+    "        self.ax.grid(True)\n",
+    "        self.ax.set_xlabel(\"t (s)\")\n",
+    "        self.ax.set_ylabel(\"y(t)\")\n",
+    "\n",
+    "        # plot clean always\n",
+    "        self.ax.plot(self.t, clean, label=\"Clean harmonic\", linewidth=1.5)\n",
+    "\n",
+    "        # plot noisy if enabled\n",
+    "        if self.noise_chk.isChecked():\n",
+    "            self.ax.plot(self.t, noisy, alpha=0.7, label=\"Noisy harmonic\")\n",
+    "\n",
+    "        # apply filter and plot if enabled\n",
+    "        if self.filtered_chk.isChecked():\n",
+    "            ftype = self.filter_type_combo.currentText()\n",
+    "            order = int(self.filter_order_spin.value())\n",
+    "            c1 = float(self.cutoff1_spin.value())\n",
+    "            c2 = float(self.cutoff2_spin.value())\n",
+    "            # protect cutoff ranges\n",
+    "            max_cut = 0.5 * self.fs - 1e-6\n",
+    "            c1 = max(0.001, min(c1, max_cut))\n",
+    "            c2 = max(0.001, min(c2, max_cut))\n",
+    "            try:\n",
+    "                b, a = design_filter(ftype, order, c1, c2, self.fs)\n",
+    "                filtered = apply_filter(b, a, noisy)\n",
+    "                self.ax.plot(self.t, filtered, linestyle='--', linewidth=1.5, label=\"Filtered\")\n",
+    "            except Exception as e:\n",
+    "                # show error text on plot\n",
+    "                self.ax.text(0.05, 0.9, f\"Filter error: {e}\", transform=self.ax.transAxes, color='red')\n",
+    "        self.ax.legend(loc='upper right')\n",
+    "        self.canvas.draw_idle()\n",
+    "\n",
+    "    def on_reset(self):\n",
+    "        # restore initial values\n",
+    "        self.amp_spin.setValue(DEFAULTS[\"amplitude\"])\n",
+    "        self.freq_spin.setValue(DEFAULTS[\"frequency\"])\n",
+    "        self.phase_spin.setValue(DEFAULTS[\"phase\"])\n",
+    "        self.noise_mean_spin.setValue(DEFAULTS[\"noise_mean\"])\n",
+    "        self.noise_var_spin.setValue(DEFAULTS[\"noise_variance\"])\n",
+    "        self.filter_type_combo.setCurrentText(DEFAULTS[\"filter_type\"])\n",
+    "        self.filter_order_spin.setValue(DEFAULTS[\"filter_order\"])\n",
+    "        self.cutoff1_spin.setValue(DEFAULTS[\"filter_cutoff1\"])\n",
+    "        self.cutoff2_spin.setValue(DEFAULTS[\"filter_cutoff2\"])\n",
+    "        self.noise_chk.setChecked(DEFAULTS[\"show_noise\"])\n",
+    "        self.filtered_chk.setChecked(DEFAULTS[\"show_filtered\"])\n",
+    "\n",
+    "        # regenerate noise to initial noise\n",
+    "        self._ensure_noise_vector(force=True)\n",
+    "        self.update_plot()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ef58fa11",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def main():\n",
+    "    app = QtWidgets.QApplication(sys.argv)\n",
+    "    win = HarmonicApp()\n",
+    "    win.show()\n",
+    "    sys.exit(app.exec_())\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7c9aa30",
+   "id": "6ccf7ba8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b66987eb",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
